--- a/.env
+++ b/.env
@@ -11,7 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=treeshopant
+DB_DATABASE=treeshopHAT
+
+
 DB_USERNAME=root
 DB_PASSWORD=
 
